Changes from version 1.3.1 to 1.3.2
 * Added a new parameter called 'primes' which can be used to separate summation variables from other variables in the expressions.

Changes from version 1.3.0 to 1.3.1
 * Fixed some bugs in identification and transportability derivations.

Changes from version 1.2.4 to 1.3.0
 * Now implements a transportability algorithm from multiple domains with limited experiments. This function replaces the following functions: 'aux.effect', 'transport' and 'meta.transport'. These functions can still be called and they serve as wrappers for the new function 'generalize'.
 * Now implements a selection bias recovery algorithm in the function 'recover'.
 * Added vignette for the simplification procedure.
 * Fixed several bugs related to the simplification procedure.

Changes from version 1.2.3 to 1.2.4
 * Fixed an issue regarding the simplification of conditional causal effects.

Changes from version 1.2.2 to 1.2.3
 * Fixed an issue in the simplification procedure.

Changes from version 1.2.1 to 1.2.2
 * Added package vignette. Updated the simplification procedure to handle more situations.

Changes from version 1.2.0 to 1.2.1
 * Revised the simplification algorithm. The structure of the graph is now utilized.

Changes from version 1.1.3 to 1.2.0
 * Major revision which adds more algorithms for causal inference.

Changes from version 1.1.1 to 1.1.3
 * Fixed an error related to function definitions.
 * Fixed compatibility with igraph package version 1.0.1.

Changes from version 1.1.0 to 1.1.1
 * Fixed an issue that caused the results of some conditional causal effects to be erroneous.

Changes from version 1.0.0 to 1.1.0
 * Added functionality to identify conditional causal effects.