@@ -1,3 +1,3 @@
-export(aux.effect, causal.effect, generalize, get.expression, meta.transport, parse.graphml, recover, transport)
+export(aux.effect, causal.effect, generalize, get.expression, meta.transport, parse.graphml, recover, transport, verma.constraints)
 import(igraph,XML)
 importFrom(ggm,dSep,powerset)
